508 Bug Fix: Admin Service Provisioning: color contrast issues on destroy button - update to application.scss, add new btn-danger style

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,3 +305,8 @@ h1,
   font-weight: bold;
   color: black;
 }
+
+.prisme-btn-danger  {
+  color: #FFFFDD;
+  background-color: #C02F1D;
+}
